# json2graph

./: .pylintrc  CONTRIBUTING.md  IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: wordlist.txt
.github/workflows/: lint.yml  pypi-publish.yaml  test.yml
examples/: basic_usage.py  demo_verify.py  file_loading_demo.py  sample_data.json  using_custom_connection.py
json2graph/: json2graph.py
json_importer/: __init__.py  json_importer.py
tests/: test_edge_cases.py  test_edge_creation.py  test_integration.py  test_json_importer.py
