[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json2graph"
version = "0.1.0"
description = "A Python library to automatically import JSON to FalkorDB as a Graph"
readme = "README.md"
authors = [
    {name = "FalkorDB"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["falkordb", "json", "graph", "database", "import", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "falkordb>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/FalkorDB/json2graph"
Repository = "https://github.com/FalkorDB/json2graph"
Issues = "https://github.com/FalkorDB/json2graph/issues"

[tool.uv]
dev-dependencies = []

[tool.setuptools]
packages = ["json2graph"]

[tool.coverage.run]
source = ["json2graph"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
